--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
               </div>
               <div class="row">
                 <div class="col-6">
-                  <h2 class="today-temp" id="todays-temp">
-                    19°c
-                  </h2>
+                  <h2 class="today-temp" id="todays-temp">19°c</h2>
                   <button
                     type="button"
                     id="temp-units"
@@ -79,7 +77,7 @@
               </div>
             </div>
             <div class="container next-days-weather">
-              <div class="card mb-3" style="max-width: 90%;">
+              <div class="card mb-3" style="max-width: 90%">
                 <div class="row">
                   <div class="col-md-4">
                     <h4 class="tomorrow-weather">Mon</h4>
@@ -92,7 +90,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3" style="max-width: 90%;">
+              <div class="card mb-3" style="max-width: 90%">
                 <div class="row">
                   <div class="col-md-4">
                     <h4 class="day-three-weather">Tue</h4>
@@ -105,7 +103,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3" style="max-width: 90%;">
+              <div class="card mb-3" style="max-width: 90%">
                 <div class="row">
                   <div class="col-md-4">
                     <h4 class="day-four-weather">Wed</h4>
@@ -118,7 +116,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3" style="max-width: 90%;">
+              <div class="card mb-3" style="max-width: 90%">
                 <div class="row">
                   <div class="col-md-4">
                     <h4 class="day-five-weather">Thu</h4>
@@ -131,7 +129,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card mb-3" style="max-width: 90%;">
+              <div class="card mb-3" style="max-width: 90%">
                 <div class="row">
                   <div class="col-md-4">
                     <h4 class="day-six-weather">Fri</h4>
@@ -147,7 +145,13 @@
             </div>
           </div>
           <br />
-          <footer class="coder-info">Coded by Kim Elisa</footer>
+          <footer class="coder-info">
+            <a>
+              href ="https://github.com/Kim-Elisa/Weather-app-project"
+              target="_blank">Open source code</a
+            >
+            by Kim Elisa
+          </footer>
         </div>
       </div>
     </div>
