Corrected <a> element error within footer

--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
           </div>
           <br />
           <footer class="coder-info">
-            <a>
-              href ="https://github.com/Kim-Elisa/Weather-app-project"
-              target="_blank">Open source code</a
+            <a
+              href="https://github.com/Kim-Elisa/Weather-app-project"
+              target="_blank"
             >
+              Open source code
+            </a>
             by Kim Elisa
           </footer>
         </div>
