Updated js and css
Added overview class to section off h1, date and time. Updated js Date function

--- a/index.html
+++ b/index.html
@@ -27,14 +27,18 @@
     <div class="container">
       <div class="card">
         <div class="card-body full-app">
-          <div class="row">
-            <div class="col">
-              <h1 class="city-searched" id="city-heading">Granada</h1>
-            </div>
+          <div class="overview">
             <div class="row">
               <div class="col">
-                <h2 class="today-weather">Today</h2>
+                <h1 class="city-searched" id="city-heading">Granada</h1>
               </div>
+              <div class="row">
+                <div class="col">
+                  <h2 class="today-weather">Today</h2>
+                </div>
+              </div>
+            </div>
+          </div>
               <div class="row">
                 <div class="col-6">
                   <h2 class="today-temp" id="todays-temp">19°c</h2>
