--- a/index.html
+++ b/index.html
@@ -29,32 +29,29 @@
         <div class="card-body full-app">
           <div class="overview">
             <div class="row">
-              <div class="col">
+              <div class="col-6">
                 <h1 class="city-searched" id="city-heading">Granada</h1>
-              </div>
-              <div class="row">
-                <div class="col">
                   <h2 class="today-weather">Today</h2>
+                  <h3 class="today-weather-description">Clear</h3>
                 </div>
               </div>
             </div>
           </div>
-              <div class="row">
-                <div class="col-6">
-                  <h2 class="today-temp" id="todays-temp">19°c</h2>
-                  <button
+                    <div class="col-6">
+                      <div class="overview-weather">
+                    <h2 class="today-temp" id="todays-temp">19°C</h2>
+                      <button
                     type="button"
                     id="temp-units"
                     class="btn btn-outline-dark unit"
-                  >
+                      >
                     °F
-                  </button>
-                </div>
-                <div class="col-6">
+                      </button>
+                <div>
                   <i class="fas fa-sun today-weather-icon"></i>
                 </div>
               </div>
-            </div>
+              </div>
             <div class="container weather-search">
               <div class="row">
                 <div class="col-6">
