--- a/index.html
+++ b/index.html
@@ -27,34 +27,32 @@
     <div class="container">
       <div class="card">
         <div class="card-body full-app">
-          <div class="overview">
-            <div class="row">
-              <div class="col-6">
+          <div class="row">
+            <div class="col-6">
+              <div class="overview">
                 <h1 class="city-searched" id="city-heading">Granada</h1>
-                  <h2 class="today-weather">Today</h2>
-                  <h3 class="today-weather-description">Clear</h3>
-                </div>
+                <h2 class="today-weather">Today</h2>
+                <h3 class="today-weather-description">Clear</h3>
               </div>
             </div>
-          </div>
-                    <div class="col-6">
-                      <div class="overview-weather">
-                    <h2 class="today-temp" id="todays-temp">19°C</h2>
-                      <button
-                    type="button"
-                    id="temp-units"
-                    class="btn btn-outline-dark unit"
-                      >
-                    °F
-                      </button>
+            <div class="col-6">
+              <div class="overview-weather">
+                <h2 class="today-temp" id="todays-temp">19°C</h2>
+                <button
+                  type="button"
+                  id="temp-units"
+                  class="btn btn-outline-dark unit"
+                >
+                  °F
+                </button>
                 <div>
                   <i class="fas fa-sun today-weather-icon"></i>
                 </div>
               </div>
-              </div>
+            </div>
             <div class="container weather-search">
               <div class="row">
-                <div class="col-6">
+                <div class="col">
                   <form id="city-search-form">
                     <input
                       type="text"
@@ -67,11 +65,13 @@
                       type="submit"
                       value="Search"
                       id="search-city-button"
+                      class="button-search"
                     />
                     <input
                       type="button"
                       value="Current"
                       id="current-location-button"
+                      class="button-current"
                     />
                   </form>
                 </div>
