Removed temp-units button

--- a/index.html
+++ b/index.html
@@ -37,16 +37,7 @@
             </div>
             <div class="col-6">
               <div class="overview-weather">
-                <div class="clearfix">
-                  <h2 class="today-temp" id="todays-temp">19°C</h2>
-                  <button
-                    type="button"
-                    id="temp-units"
-                    class="btn btn-outline-dark unit"
-                  >
-                    <div class="float-left">°F</div>
-                  </button>
-                </div>
+                <h2 class="today-temp" id="todays-temp">19°C | °F</h2>
                 <div>
                   <i class="fas fa-sun today-weather-icon"></i>
                 </div>
