Added span element to temp units

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             </div>
             <div class="col-6">
               <div class="overview-weather">
-                <h2 class="today-temp" id="todays-temp">19°C | °F</h2>
+                <h2 class="today-temp" id="todays-temp">19</h2>
+                <span class="units"> °C | °F></span>
                 <div>
                   <i class="fas fa-sun today-weather-icon"></i>
                 </div>
