corrected span element for units

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col-6">
               <div class="overview-weather">
                 <h2 class="today-temp" id="todays-temp">19</h2>
-                <span class="units"> °C | °F></span>
+                <span class="units">°C | °F</span>
                 <div>
                   <i class="fas fa-sun today-weather-icon"></i>
                 </div>
