Updated span element for units
added strong element for temperature reading

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             </div>
             <div class="col-6">
               <div class="overview-weather">
-                <h2 class="today-temp" id="todays-temp">19</h2>
+                <span class="today-temp" id="todays-temp">
+                  <strong>19</strong></span
+                >
                 <span class="units">°C | °F</span>
                 <div>
                   <i class="fas fa-sun today-weather-icon"></i>
