added link to farenheit for JS editing later on

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <span class="today-temp" id="todays-temp">
                   <strong>19</strong></span
                 >
-                <span class="units">°C | °F</span>
+                <span class="units">°C | <a href="#">°F</a></span>
                 <div>
                   <i class="fas fa-sun today-weather-icon"></i>
                 </div>
