updated temp-units section
removed text decoration for farenheit units

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
                 <span class="today-temp" id="todays-temp">
                   <strong>19</strong></span
                 >
-                <span class="units">°C | <a href="#">°F</a></span>
+                <span class="units"
+                  >°C | <a href="#" id="farenheit">°F</a></span
+                >
                 <div>
                   <i class="fas fa-sun today-weather-icon"></i>
                 </div>
