removed icon src from html and added openWeather's icons to js

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   >°C | <a href="#" id="farenheit">°F</a></span
                 >
                 <div>
-                  <i class="fas fa-sun today-weather-icon"></i>
+                  <img src="" alt="Clear" id="today-weather-icon" class="float-right"></i>
                 </div>
               </div>
             </div>
