--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="row">
             <div class="col-6">
               <div class="overview">
-                <h1 class="city-searched" id="city-heading">Granada</h1>
+                <h1 class="city-searched" id="city">Granada</h1>
                 <h2 class="today-weather">Today</h2>
                 <h3 class="today-weather-description">Clear</h3>
               </div>
