--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <strong>19</strong></span
                 >
                 <span class="units"
-                  >°C | <a href="#" id="farenheit">°F</a></span
+                  >°C | <a href="#" id="fahrenheit">°F</a></span
                 >
                 <div>
                   <img src="" alt="Clear" id="today-weather-icon" class="float-right"></i>
