--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             <div class="col-6">
               <div class="overview">
                 <h1 id="city"></h1>
-                <h2 class="today-weather">Today</h2>
-                <h3 class="today-weather-description"></h3>
+                <h2 id="current-date">Today</h2>
+                <h3 id="weather-description"></h3>
               </div>
             </div>
             <div class="col-6">
               <div class="overview-weather">
-                <span class="today-temp" id="todays-temp">
+                <span class="temperature" id="todays-temp">
                   <strong>19</strong></span
                 >
                 <span class="units"
