--- a/index.html
+++ b/index.html
@@ -144,18 +144,16 @@
             </div>
           </div>
           <br />
-          <footer class="coder-info">
+        </div>
+      </div>
+    </div>
+     <footer class="coder-info">
             <a
               href="https://github.com/Kim-Elisa/Weather-app-project"
               target="_blank"
             >
-              Open source code
-            </a>
-            by Kim Elisa
+              Open source code</a> by Kim Elisa
           </footer>
-        </div>
-      </div>
-    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
