corrected and updated date section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col-6">
               <div class="overview">
                 <h1 id="city"></h1>
-                <h2 id="current-date">Last updated: Today</h2>
+                <h2 id="current-date"></h2>
                 <h3 id="weather-description"></h3>
               </div>
             </div>
