updated forecast section of HTML

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                   ><a href="#" id="celsius">°C</a> | <a href="#" id="fahrenheit">°F</a></span
                 >
                 <div>
-                  <img src="" alt="Clear" id="today-weather-icon" class="float-right"></i>
+                  <img src="" alt="Clear" id="today-weather-icon" class="float-right"></img>
                 </div>
               </div>
             </div>
@@ -76,14 +76,15 @@
               </div>
             </div>
             <div class="container next-days-weather">
-              <div class="card mb-3" style="max-width: 90%">
+              <div class="card mb-3" style="max-width: 95%">
                 <div class="row">
                   <div class="col-md-4">
                     <h4 class="tomorrow-weather">Mon</h4>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h4 class="tomorrow-temp">22°c</h4>
+                      <p class="tomorrow-max-temp">22°</p>
+                      <p class="tomorrow-min-temp">16°</p>
                       <i class="fas fa-sun next-day-weather-icon"></i>
                     </div>
                   </div>
@@ -96,7 +97,8 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h4 class="day-three-temp">20°c</h4>
+                      <p class="day-three-max-temp">20°</p>
+                      <p class="day-three-min-temp">15°</p>
                       <i class="fas fa-sun day-three-weather-icon"></i>
                     </div>
                   </div>
@@ -109,7 +111,8 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h4 class="day-four-temp">17°c</h4>
+                      <p class="day-four-max-temp">17°</p>
+                      <p class="day-four-min-temp">10°</p>
                       <i class="fas fa-cloud day-four-weather-icon"></i>
                     </div>
                   </div>
@@ -122,7 +125,8 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h4 class="day-five-temp">18°c</h4>
+                      <p class="day-five-max-temp">18°</p>
+                      <p class="day-five-min-temp">18°</p>
                       <i class="fas fa-cloud day-five-weather-icon"></i>
                     </div>
                   </div>
@@ -135,7 +139,8 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h4 class="day-six-temp">21°c</h4>
+                      <p class="day-six-max-temp">21°</p>
+                      <p class="day-six-min-temp">21°</p>
                       <i class="fas fa-sun day-six-weather-icon"></i>
                     </div>
                   </div>
