--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <div class="card-body border-dark full-app">
+        <div class="card-body full-app">
           <div class="row">
             <div class="col-6">
               <div class="overview">
