updated forecast temperature
amended p elements to span elements

--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <p class="tomorrow-max-temp">22°</p>
-                      <p class="tomorrow-min-temp">16°</p>
+                      <span class="tomorrow-temp"> <strong id="tomorrow-max-temp">22°</strong>
+                      <small id="tomorrow-min-temp">16°</small>
+                      </span>
                       <i class="fas fa-sun next-day-weather-icon"></i>
                     </div>
                   </div>
@@ -97,8 +98,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <p class="day-three-max-temp">20°</p>
-                      <p class="day-three-min-temp">15°</p>
+                      <span class="day-three-temp">
+                         <strong class="day-three-max-temp">20°</strong>
+                      <small class="day-three-min-temp">15°</small>
+                      </span>
                       <i class="fas fa-sun day-three-weather-icon"></i>
                     </div>
                   </div>
@@ -111,8 +114,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <p class="day-four-max-temp">17°</p>
-                      <p class="day-four-min-temp">10°</p>
+                      <span class="day-four-temp">
+                      <strong class="day-four-max-temp">17°</strong>
+                      <small class="day-four-min-temp">10°</small>
+                      </span>
                       <i class="fas fa-cloud day-four-weather-icon"></i>
                     </div>
                   </div>
@@ -125,8 +130,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <p class="day-five-max-temp">18°</p>
-                      <p class="day-five-min-temp">18°</p>
+                      <span class="day-five-temp">
+                       <strong class="day-five-max-temp">18°</strong>
+                      <small class="day-five-min-temp">18°</small>
+                      </span>
                       <i class="fas fa-cloud day-five-weather-icon"></i>
                     </div>
                   </div>
@@ -139,8 +146,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <p class="day-six-max-temp">21°</p>
-                      <p class="day-six-min-temp">21°</p>
+                      <span class="day-six-temp">
+                       <strong class="day-six-max-temp">21°</strong>
+                      <small class="day-six-min-temp">21°</small>
+                      </span>
                       <i class="fas fa-sun day-six-weather-icon"></i>
                     </div>
                   </div>
