added ids to forecast dates

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <div class="card mb-3" style="max-width: 95%">
                 <div class="row">
                   <div class="col-md-4">
-                    <h4 class="tomorrow-date">Mon</h4>
+                    <h4 class="forecast-date" id="tomorrow-date">Mon</h4>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -94,7 +94,7 @@
               <div class="card mb-3" style="max-width: 95%">
                 <div class="row">
                   <div class="col-md-4">
-                    <h4 class="day-three-date">Tue</h4>
+                    <h4 class="forecast-date" id="day-three-date">Tue</h4>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -110,7 +110,7 @@
               <div class="card mb-3" style="max-width: 95%">
                 <div class="row">
                   <div class="col-md-4">
-                    <h4 class="day-four-date">Wed</h4>
+                    <h4 class="forecast-date" id="day-four-date">Wed</h4>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -126,7 +126,7 @@
               <div class="card mb-3" style="max-width: 95%">
                 <div class="row">
                   <div class="col-md-4">
-                    <h4 class="day-five-date">Thu</h4>
+                    <h4 class="forecast-date" id="day-five-date">Thu</h4>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -142,7 +142,7 @@
               <div class="card mb-3" style="max-width: 95%">
                 <div class="row">
                   <div class="col-md-4">
-                    <h4 class="day-six-date">Fri</h4>
+                    <h4 class="forecast-date" id="day-six-date">Fri</h4>
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
