amended forecast-temperatures

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                       type="submit"
                       value="Search"
                       id="search-city-button"
-                      class="button-search"
+                      class="btn btn-primary"
                     />
                     <input
                       type="button"
                       value="Current"
                       id="current-location-button"
-                      class="button-current"
+                      class="btn btn-secondary"
                     />
                   </form>
                 </div>
@@ -83,9 +83,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <span class="tomorrow-temp"> <strong id="tomorrow-max-temp">22°</strong>
-                      <small id="tomorrow-min-temp">16°</small>
-                      </span>
+                      <div class="forecast-temperatures"> 
+                        <span id="tomorrow-max">22°</span>
+                      <span id="tomorrow-min">16°</span>
+                      </div>
                       <i class="fas fa-sun next-day-weather-icon"></i>
                     </div>
                   </div>
@@ -98,10 +99,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <span class="day-three-temp">
-                         <strong class="day-three-max-temp">20°</strong>
-                      <small class="day-three-min-temp">15°</small>
-                      </span>
+                      <div class="forecast-temperatures">
+                         <span class="day-three-max">20°</span>
+                      <span class="day-three-min">15°</span>
+                      </div>
                       <i class="fas fa-sun day-three-weather-icon"></i>
                     </div>
                   </div>
@@ -114,10 +115,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <span class="day-four-temp">
-                      <strong class="day-four-max-temp">17°</strong>
-                      <small class="day-four-min-temp">10°</small>
-                      </span>
+                      <div class="forecast-temperatures">
+                      <span class="day-four-max">17°</span>
+                      <span class="day-four-min">10°</span>
+                      </div>
                       <i class="fas fa-cloud day-four-weather-icon"></i>
                     </div>
                   </div>
@@ -130,10 +131,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <span class="day-five-temp">
-                       <strong class="day-five-max-temp">18°</strong>
-                      <small class="day-five-min-temp">18°</small>
-                      </span>
+                      <div class="forecast-temperatures">
+                       <span class="day-five-max">18°</span>
+                      <span class="day-five-min">18°</span>
+                      </div>
                       <i class="fas fa-cloud day-five-weather-icon"></i>
                     </div>
                   </div>
@@ -146,10 +147,10 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <span class="day-six-temp">
-                       <strong class="day-six-max-temp">21°</strong>
-                      <small class="day-six-min-temp">21°</small>
-                      </span>
+                      <div class="forecast-temperatures">
+                       <span class="day-six-max-temp">21°</span>
+                      <span class="day-six-min-temp">21°</span>
+                      </div>
                       <i class="fas fa-sun day-six-weather-icon"></i>
                     </div>
                   </div>
