Removed duplicate HTML code

--- a/index.html
+++ b/index.html
@@ -84,74 +84,10 @@
                   <div class="col-md-8">
                     <div class="card-body">
                       <div class="forecast-temperatures"> 
-                        <span id="tomorrow-max">22°</span>
-                      <span id="tomorrow-min">16°</span>
+                        <span id="forecast-temperature-max">22°</span>
+                      <span id="forecast-temperature-min">16°</span>
                       </div>
                       <i class="fas fa-sun next-day-weather-icon"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mb-3" style="max-width: 95%">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h4 class="forecast-date" id="day-three-date">Tue</h4>
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <div class="forecast-temperatures">
-                         <span class="day-three-max">20°</span>
-                      <span class="day-three-min">15°</span>
-                      </div>
-                      <i class="fas fa-sun day-three-weather-icon"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mb-3" style="max-width: 95%">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h4 class="forecast-date" id="day-four-date">Wed</h4>
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <div class="forecast-temperatures">
-                      <span class="day-four-max">17°</span>
-                      <span class="day-four-min">10°</span>
-                      </div>
-                      <i class="fas fa-cloud day-four-weather-icon"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mb-3" style="max-width: 95%">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h4 class="forecast-date" id="day-five-date">Thu</h4>
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <div class="forecast-temperatures">
-                       <span class="day-five-max">18°</span>
-                      <span class="day-five-min">18°</span>
-                      </div>
-                      <i class="fas fa-cloud day-five-weather-icon"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card mb-3" style="max-width: 95%">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h4 class="forecast-date" id="day-six-date">Fri</h4>
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <div class="forecast-temperatures">
-                       <span class="day-six-max-temp">21°</span>
-                      <span class="day-six-min-temp">21°</span>
-                      </div>
-                      <i class="fas fa-sun day-six-weather-icon"></i>
                     </div>
                   </div>
                 </div>
