Updated search bar

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 <div class="col">
                   <form id="city-search-form">
                     <input
-                      type="text"
+                      type="search"
                       placeholder="Enter a city"
+                      class="form-control"
                       autocomplete="off"
                       autofocus="on"
                       id="search-text-input"
