building JS for forecast - not currently working!

--- a/index.html
+++ b/index.html
@@ -75,23 +75,7 @@
                 </div>
               </div>
             </div>
-            <div class="container next-days-weather">
-              <div class="card mb-3" style="max-width: 95%">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h4 class="forecast-date" id="tomorrow-date">Mon</h4>
-                  </div>
-                  <div class="col-md-8">
-                    <div class="card-body">
-                      <div class="forecast-temperatures"> 
-                        <span id="forecast-temperature-max">22°</span>
-                      <span id="forecast-temperature-min">16°</span>
-                      </div>
-                      <i class="fas fa-sun next-day-weather-icon"></i>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            <div class="container" id="forecast">
             </div>
           </div>
           <br />
