Updated JS to show forecast cards and multiple styling tweaks
added displayForecast() to JS script, now the cards are showing correctly on the app.
Big styling reshuffle and changes to overview text if city names is > 10 letters

--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
       <div class="card">
         <div class="card-body full-app">
           <div class="row">
-            <div class="col-6">
+            <div class="col-7">
               <div class="overview">
                 <h1 id="city"></h1>
+                <div class="sub-overview">
                 <h2 id="current-date"></h2>
                 <h3 id="weather-description"></h3>
+                </div>
               </div>
             </div>
-            <div class="col-6">
+            <div class="col-5">
               <div class="overview-weather">
                 <span class="temperature" id="todays-temp">
                   <strong>19</strong></span
@@ -48,6 +50,7 @@
                 </div>
               </div>
             </div>
+          </div>
             <div class="container weather-search">
               <div class="row">
                 <div class="col">
@@ -77,18 +80,16 @@
             </div>
             <div class="container" id="forecast">
             </div>
-          </div>
-          <br />
         </div>
-      </div>
-    </div>
-     <footer class="coder-info">
-            <a
+        <div class="card-footer text-muted coder-info">
+          <a
               href="https://github.com/Kim-Elisa/Weather-app-project"
               target="_blank"
             >
               Open source code</a> by Kim Elisa
-          </footer>
+        </div>
+      </div>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
