updated JS formatDay function and forecast styling

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
                 <div class="sub-overview">
                 <h2 id="current-date"></h2>
                 <h3 id="weather-description"></h3>
+                <p class="wind-speed">Wind: <span id="wind"></span> m/s</p>
                 </div>
               </div>
             </div>
             <div class="col-5">
               <div class="overview-weather">
                 <span class="temperature" id="todays-temp">
-                  <strong>19</strong></span
+                  <strong></strong></span
                 >
                 <span class="units"
                   ><a href="#" id="celsius">°C</a> | <a href="#" id="fahrenheit">°F</a></span
