--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="sub-overview">
                 <h2 id="current-date"></h2>
                 <h3 id="weather-description"></h3>
-                <p class="wind-speed">Wind: <span id="wind"></span> m/s</p>
+                <p class="wind-speed">Wind: <span id="wind"></span> m/s,</p>
                 </div>
               </div>
             </div>
@@ -53,32 +53,37 @@
             </div>
           </div>
             <div class="container weather-search">
-              <div class="row">
-                <div class="col">
                   <form id="city-search-form">
+                  <div class="row">
+                  <div class="col-8">
                     <input
                       type="search"
+                      class="form-control w-100"
                       placeholder="Enter a city"
                       autocomplete="off"
                       autofocus="on"
                       id="search-text-input"
+                      aria-label="search"
                     />
-                    <input
+                  </div>
+                  <div class="col-2">
+                    <button
                       type="submit"
-                      value="Search"
                       id="search-city-button"
-                      class="btn btn-primary"
-                    />
+                      class="btn btn-primary">Search
+                    </button>
+                    </div>
+                    <div class="col-2">
                     <input
                       type="button"
-                      value="Current"
+                      value="📍"
                       id="current-location-button"
-                      class="btn btn-secondary"
+                      class="btn btn-warning"
                     />
+                    </div>
+                    </div>
                   </form>
                 </div>
-              </div>
-            </div>
             <div class="container" id="forecast">
             </div>
         </div>
